--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8001
 
+# Platform Configuration
+APP_PLATFORM_FEE_PERCENTAGE=5.0
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
@@ -79,7 +82,16 @@ SESSION_SECURE_COOKIE=false
 # CORS Configuration
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
+# Yoco Payment Gateway Configuration
+YOCO_API_URL=https://api.yoco.com/v1
+YOCO_SECRET_KEY=sk_test_your_secret_key_here
+YOCO_PUBLIC_KEY=pk_test_your_public_key_here
+YOCO_WEBHOOK_SECRET=your_webhook_secret_here
+YOCO_WEBHOOK_URL=https://yourdomain.com/api/v1/payments/yoco/webhook
+
 # Production Security Settings (uncomment for production)
 # SESSION_SECURE_COOKIE=true
 # SESSION_SAME_SITE=strict
 # SANCTUM_TOKEN_PREFIX=ordo_prod_
+# YOCO_SECRET_KEY=sk_live_your_live_secret_key
+# YOCO_PUBLIC_KEY=pk_live_your_live_public_key
